<resources>
    <string name="app_name">Loan Tracker 1.0</string>

    <string name="welcome_msg_1">Welcome to Loan Tracker</string>

    <!-- Menues -->
    <string name="create_loan">New Loan</string>
    <string name="show_loans">Show My Loans</string>
    <string name="show_alerts">Alerts</string>
    <string name="action_settings">Settings</string>
    <string name="action_showhelp">Help</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="header_create_new">Create New Loan</string>

    <string name="name_ip_text">Loan Name</string>
    <string name="name_ip_hint">Enter Loan Name</string>
    <string name="edit_message">Enter Principal</string>
    <string name="principal_ip_text">Principal</string>
    <string name="principal_ip_hint">Enter Principal Amount</string>
    <string name="interest_ip_text">Interest</string>
    <string name="interest_ip_hint">Enter Interest Amount</string>
    <string name="tenor_ip_text">Tenure</string>
    <string name="tenor_ip_hint">Enter Tenor</string>
    <string name="startdate_ip_text">Start Date</string>
    <string name="emidate_ip_text">EMI Date</string>
    <string name="emidate_ip_hint">Select Date</string>
    <string name="button_calendar">Date</string>
    <string name="button_send">Send</string>
    <string name="button_save">Save</string>
    <string name="button_clear">Clear</string>
    <string name="button_reset">Reset</string>
    <string name="button_show_reports">Show Reports</string>
    <string name="title_activity_emicalculator1">EMI Amount</string>

    <string-array name="Planets">
        <item>Sun</item>
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
