<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sayaanand.loantrackerv1.MainActivity">
    <item
        android:id="@+id/action_create_loan"
        android:orderInCategory="1"
        android:title="@string/create_loan"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/action_show_loans"
        android:orderInCategory="2"
        android:title="@string/show_loans"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/action_show_alerts"
        android:orderInCategory="3"
        android:title="@string/show_alerts"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="4"
        android:title="@string/action_settings"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/action_showhelp"
        android:orderInCategory="5"
        android:title="@string/action_showhelp"
        app:showAsAction="collapseActionView" />
</menu>
